@@ -1,6 +1,8 @@
 Copyright (C) 2017 Alpha Griffin
 @%@~LICENSE~@%@
 
+saw_081117_1 - Market mode now has graphing!
+
 saw_081017_4 - Use two decimal points for change percentage.
 
 saw_081017_3 - Market mode now compares against previous summary.
